@@ -5,7 +5,8 @@ Release Notes for version 1.5.1 (Oct. 19, 2011.)
 Changes since the uhexen2-1.5.0 release:
 
 * Fixed an inventory icon scrolling bug.
-* Updates to windows midi playback code.
-* Fixed the dos version's failure on computers with more than 2GB memory.
+* Windows: Updates to the midi playback code.
+* DOS: Fixed failure on computers with more than 2GB memory.
+* DOS: Added support for the -cddev command line arguments.
 * Build system updates. Several source clean-ups.
 
